--- a/web.config
+++ b/web.config
@@ -2,5 +2,8 @@
 <configuration>
     <system.webServer>
         <directoryBrowse enabled="true" />
+        <staticContent>
+            <mimeMap fileExtension=".ogg" mimeType="audio/ogg" />
+        </staticContent>
     </system.webServer>
 </configuration>
