--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "expose-loader": "^3.1.0",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2"
+  },
+  "scripts": {
+    "build": "webpack"
   }
 }
